# yatui

./: README.md  box.c  box.h  color.c  color.h  point.c  terminal.c  terminal.h  tui.c
example/: CMakeLists.txt  boxShroom.c  keyboard.c  lineShroom.c  read_key.c  shroom.c
include/: box.h  color.h  key.h  keyboard.h  line.h  point.h  terminal.h  tui.h
src/: box.c  color.c  key.c  line.c  point.c  terminal.c  tui.c
